--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "next": "14.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "framer-motion": "^11.0.0",
+    "lucide-react": "^0.312.0",
+    "react-dropzone": "^14.2.3"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
