--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,11 +3,12 @@ fastapi>=0.109.0
 uvicorn[standard]>=0.27.0
 python-multipart>=0.0.6
 
-# AI/ML Tools - LangChain
-langchain>=0.1.0
+# AI/ML Tools - LangChain (pinned to compatible versions)
+langchain==0.1.20
 langchain-google-genai>=0.0.6
 langchain-chroma>=0.1.0
-langchain-core>=0.1.0
+langchain-core==0.1.52
+langchain-community==0.0.38
 
 # Google AI
 google-generativeai>=0.3.0
