feat: enhance document processing with EasyOCR integration and file validation in orchestrator

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -21,6 +21,8 @@ torch>=2.0.0
 transformers>=4.36.0
 pdf2image>=1.16.0
 Pillow>=10.0.0
+pytesseract>=0.3.10
+easyocr>=1.7.0
 
 # ML/Predictive Models
 scikit-learn>=1.3.0
